Bug 508835 - [easyfix] Search input text disappear because it is scrollable with pgup/pgdn
Summary: [easyfix] Search input text disappear because it is scrollable with pgup/pgdn
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: search (other bugs)
Version First Reported In: 25.08.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-28 01:37 UTC by Xavier Corredor Llano
Modified: 2025-09-16 16:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Error Demonstration (188.88 KB, video/webm)
2025-08-28 01:37 UTC, Xavier Corredor Llano
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xavier Corredor Llano 2025-08-28 01:37:31 UTC
Created attachment 184516 [details]
Error Demonstration

SUMMARY

Using the search, if the user forgets to push enter to focus in the results, pgup/pgdn makes that search input text disappear because it is scrollable (only with this keys but not sure if with others). In general this happens meanwhile the focus is in input search text, it should be never scrollable.

STEPS TO REPRODUCE
1. Activate the search
2. Focus in input text search press pgup or pgdn

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Archlinux
Dolphin: 25.08
Comment 1 TraceyC 2025-08-29 01:09:49 UTC
I can reproduce on Dolphin built from git-master
Comment 2 Pan Zhang 2025-09-05 07:18:39 UTC
I have reproduced the issue and submitted a merge request.
Comment 3 TraceyC 2025-09-11 12:20:26 UTC
(In reply to PanZhang from comment #2)
> I have reproduced the issue and submitted a merge request.

That's great! Can you copy a link to your MR in this report? Thanks!
Comment 4 Pan Zhang 2025-09-11 12:45:38 UTC
(In reply to TraceyC from comment #3)
> (In reply to PanZhang from comment #2)
> > I have reproduced the issue and submitted a merge request.
> 
> That's great! Can you copy a link to your MR in this report? Thanks!

Okay, here is the link to my merge request: https://invent.kde.org/system/dolphin/-/merge_requests/1047
Comment 5 TraceyC 2025-09-11 13:07:55 UTC
(In reply to PanZhang from comment #4)

> Okay, here is the link to my merge request:
> https://invent.kde.org/system/dolphin/-/merge_requests/1047

Thanks so much. I pinged the folks in the KDE File Management room in Matrix about it. Welcome :)
Comment 6 Pan Zhang 2025-09-12 01:57:38 UTC
(In reply to TraceyC from comment #5)
> (In reply to PanZhang from comment #4)
> 
> > Okay, here is the link to my merge request:
> > https://invent.kde.org/system/dolphin/-/merge_requests/1047
> 
> Thanks so much. I pinged the folks in the KDE File Management room in Matrix
> about it. Welcome :)

Thanks a lot!
Comment 7 Akseli Lahtinen 2025-09-16 16:39:39 UTC
Git commit 407ce0706a18b9e1245f7c52246a76b0e54939dc by Akseli Lahtinen, on behalf of Pan Zhang.
Committed on 16/09/2025 at 16:39.
Pushed by akselmo into branch 'master'.

animatedheightwidget: ignore PageUp/PageDown to avoid invisible scroll

When typing in the search bar (or other widgets using AnimatedHeightWidget), pressing PageUp or PageDown would cause the internal QScrollArea (with hidden scrollbars) to react and scroll. This made the entered text appear to disappear even though focus stayed in the input field. PageUp and PageDown are now intercepted in AnimatedHeightWidget to prevent the underlying QScrollArea from handling them, ensuring input remains visible across all users of AnimatedHeightWidget.

M  +16   -0    src/animatedheightwidget.cpp
M  +7    -0    src/animatedheightwidget.h

https://invent.kde.org/system/dolphin/-/commit/407ce0706a18b9e1245f7c52246a76b0e54939dc